# src/session.rs
@@ -1,10 +1,13 @@
 //! OAuth sessions.
 
-use axum::{RequestPartsExt as _, extract::FromRequestParts};
-
-use chrono::{DateTime, Utc};
+use axum::{
+    RequestPartsExt as _,
+    extract::{FromRef, FromRequestParts},
+};
 
 use derive_more::Deref;
+use ring_channel_model::User;
+use sqlx::FromRow;
 
 use std::fmt::{self, Debug, Formatter};
 
@@ -16,7 +19,7 @@ use serde::{Deserialize, Serialize};
 
 use tower_sessions::Session as TowerSession;
 
-use crate::app::{AppError, error::AppErrorKind};
+use crate::app::{AppError, AppState, error::AppErrorKind};
 
 /// A session, used to keep state.
 ///
@@ -32,6 +35,7 @@ pub struct Session {
     data: SessionData,
 }
 
+/// Inner session data.
 #[derive(Clone, Debug, Deserialize, Serialize)]
 pub struct SessionData {
     /// A randomly generated state string.
@@ -40,40 +44,37 @@ pub struct SessionData {
     ///
     /// [discord's docs]: https://discord.com/developers/docs/topics/oauth2#state-and-security
     pub state: String,
-    #[serde(flatten)]
-    pub token: Option<AccessToken>,
+    /// The identity of the user.
+    ///
+    /// This is the user's ID in the database. If this is `None`, this is an
+    /// anonymous session.
+    pub identity: Option<i32>,
 }
 
 impl Session {
     /// The name of the key this struct is stored in on the session.
     pub const SESSION_KEY: &'static str = "oauth_session";
+
+    /// Sets the user of the session.
+    ///
+    /// **Only call this if you are confident the user has followed the proper
+    /// authentication flow!**
+    pub async fn set_user(&mut self, user_id: i32) -> Result<(), tower_sessions::session::Error> {
+        self.data.identity = Some(user_id);
+        self.session
+            .insert(Session::SESSION_KEY, &self.data)
+            .await?;
+
+        Ok(())
+    }
 }
 
 impl Debug for Session {
     fn fmt(&self, f: &mut Formatter<'_>) -> fmt::Result {
         f.debug_struct("Session")
             .field("state", &self.data.state)
-            .field("token", &self.data.token)
+            .field("identity", &self.data.identity)
             .finish()
-    }
-}
-
-/// The token granted by an Oauth flow.
-#[derive(Clone, Deserialize, Serialize)]
-pub struct AccessToken {
-    /// The access token of the user.
-    pub access_token: String,
-    /// The refresh token of the user.
-    pub refresh_token: String,
-    /// When the token expires.
-    pub expires_at: DateTime<Utc>,
-}
-
-impl Debug for AccessToken {
-    fn fmt(&self, f: &mut Formatter<'_>) -> fmt::Result {
-        f.debug_struct("AccessToken")
-            .field("expires_at", &self.expires_at)
-            .finish_non_exhaustive()
     }
 }
 
@@ -96,7 +97,7 @@ where
             tracing::trace!("creating new session");
             let session_data = SessionData {
                 state: random_state(),
-                token: None,
+                identity: None,
             };
             session.insert(Session::SESSION_KEY, &session_data).await?;
             session_data
@@ -106,6 +107,77 @@ where
             session,
             data: session_data,
         })
+    }
+}
+
+/// An authenticated user.
+///
+/// This type dereferences into the stored user [`User`], which stores basic
+/// information about the user that is typically suitable for most endpoints.
+#[derive(Clone, Debug, Deref)]
+pub struct SessionUser {
+    #[deref]
+    user: User,
+    identity: i32,
+}
+
+impl SessionUser {
+    /// Unwraps the inner user model.
+    pub fn into_inner(self) -> User {
+        self.user
+    }
+
+    /// The database ID of the user.
+    ///
+    /// This is simply a copy of [`SessionData::identity`], but you don't have
+    /// to work with an [`Option`].
+    pub fn identity(self) -> i32 {
+        self.identity
+    }
+}
+
+impl<S> FromRequestParts<S> for SessionUser
+where
+    AppState: FromRef<S>,
+    S: Send + Sync,
+{
+    type Rejection = AppError;
+
+    async fn from_request_parts(parts: &mut Parts, state: &S) -> Result<Self, Self::Rejection> {
+        #[derive(FromRow)]
+        struct UserQuery {
+            username: String,
+            mobiums: i64,
+        }
+
+        let session = parts.extract_with_state::<Session, S>(state).await?;
+
+        let state = AppState::from_ref(state);
+
+        if let Some(identity) = session.identity {
+            // fetch identity
+            let user = sqlx::query_as::<_, UserQuery>(
+                r#"
+                SELECT username, mobiums
+                FROM user
+                WHERE id = $1
+                "#,
+            )
+            .bind(identity)
+            .fetch_optional(&state.db)
+            .await?;
+
+            if let Some(UserQuery { username, mobiums }) = user {
+                Ok(SessionUser {
+                    user: User { username, mobiums },
+                    identity,
+                })
+            } else {
+                Err(AppErrorKind::InvalidSession.into())
+            }
+        } else {
+            Err(AppErrorKind::UserUnauthenticated.into())
+        }
     }
 }
 
